--- a/requirements/requirements-snowflake.txt
+++ b/requirements/requirements-snowflake.txt
@@ -78,9 +78,9 @@ cffi==1.15.1 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:ed9cb427ba5504c1dc15ede7d516b84757c3e3d7868ccc85121d9310d27eed0b \
     --hash=sha256:fa6693661a4c91757f4412306191b6dc88c1703f780c8234035eac011922bc01 \
     --hash=sha256:fcd131dd944808b5bdb38e6f5b53013c5aa4f334c5cad0c72742f6eba4b73db0
-charset-normalizer==2.0.12 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:2857e29ff0d34db842cd7ca3230549d1a697f96ee6d3fb071cfa6c7393832597 \
-    --hash=sha256:6881edbebdb17b39b4eaaa821b438bf6eddffb4468cf344f09f89def34a8b1df
+charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:5a3d016c7c547f69d6f81fb0db9449ce888b418b5b9952cc5e6e66843e9dd845 \
+    --hash=sha256:83e9a75d1911279afd89352c68b45348559d1fc0506b054b346651b5e7fee29f
 click==8.1.3 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:7682dc8afb30297001674575ea00d1814d808d6a36af415a82bd481d37ba7b8e \
     --hash=sha256:bb4d8133cb15a609f44e8213d9b391b0809795062913b383c62be0ee95b1db48
@@ -107,9 +107,9 @@ cryptography==3.4.8 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:d2a6e5ef66503da51d2110edf6c403dc6b494cc0082f85db12f54e9c5d4c3ec5 \
     --hash=sha256:d9ec0e67a14f9d1d48dd87a2531009a9b251c02ea42851c060b25c782516ff06 \
     --hash=sha256:f44d141b8c4ea5eb4dbc9b3ad992d45580c1d22bf5e24363f2fbf50c2d7ae8a7
-dbt-core==1.0.9 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:38e06c6a8f74de6fdd35932cf3b23abb5677aea8d5b93bec9e0fbfb9b0132fc7 \
-    --hash=sha256:9b9a5460b711678fcfe123730279d7e5984b3901b9ff8fb5cc7e70dab9a4b316
+dbt-core==1.1.4 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:127c62bf5c80d7b0e159678d952e693f907cd103cdcad8ae2356add874dad2d7 \
+    --hash=sha256:9e5c96241f1c79b3a56d14a7cace2c4f7875e17541ff13b4fa4acb9867b485a6
 dbt-extractor==0.4.1 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:037907a7c7ae0391045d81338ca77ddaef899a91d80f09958f09fe374594e19b \
     --hash=sha256:34783d788b133f223844e280e37b3f5244f2fb60acc457aa75c2667e418d5442 \
@@ -130,14 +130,17 @@ dbt-extractor==0.4.1 ; python_version >= "3.8" and python_version < "3.9" \
 dbt-rpc==0.1.2 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:3e9709b9f88928a08352248e0c49b3635758afca28d5d5e8fa519484afe1f657 \
     --hash=sha256:5fd8870b825fef7acf5a46d1d0b65919ad048c3fc907c375eaac09f07dee3f50
-dbt-snowflake==1.0.1 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:8d286527f9bf3ced6196d509f249e6076adb79102712428699f3344a8b756558 \
-    --hash=sha256:b3262f3f6ef434d8ac288eda91d96b139d75b665ed3ff8c60472826f24999e9d
+dbt-snowflake==1.1.0 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:4d192795232c2d575602d8c7996f98e3f6a3500e4b8ad84a4dfab110294adede \
+    --hash=sha256:cd7a264f815f5a1a042e00866806768fab8eb2caaee4c542537c51e03b76146d
+filelock==3.9.0 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:7b319f24340b51f55a2bf7a12ac0755a9b03e718311dac567a0f4f7fabd2f5de \
+    --hash=sha256:f58d535af89bb9ad5cd4df046f741f8553a418c01a7856bf0d173bbc9f6bd16d
 future==0.18.3 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:34a17436ed1e96697a86f9de3d15a3b0be01d8bc8de9c1dffd59fb8234ed5307
-hologram==0.0.14 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:2911b59115bebd0504eb089532e494fa22ac704989afe41371c5361780433bfe \
-    --hash=sha256:fd67bd069e4681e1d2a447df976c65060d7a90fee7f6b84d133fd9958db074ec
+hologram==0.0.15 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:48ca81ed47da1c604b2d3b951424b600eb8a5785b00513e3b8e3ae8101f90145 \
+    --hash=sha256:79b3d04df84d5a9d09c2e669ec5bcc50b1713ec79f4683cfdea85583b41e46f0
 idna==3.4 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:814f528e8dead7d329833b91c5faa87d60bf71824cd12a7530b5526063d02cb4 \
     --hash=sha256:90b77e79eaa3eba6de819a0c442c0b4ceefc341a7a2ab77d7562bf49f425c5c2
@@ -162,9 +165,9 @@ jinja2==2.11.3 ; python_version >= "3.8" and python_version < "3.9" \
 json-rpc==1.13.0 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:84b45058e5ba95f49c7b6afcf7e03ab86bee89bf2c01f3ad8dd41fe114fc1f84 \
     --hash=sha256:def0dbcf5b7084fc31d677f2f5990d988d06497f2f47f13024274cfb2d5d7589
-jsonschema==3.1.1 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:2fa0684276b6333ff3c0b1b27081f4b2305f0a36cf702a23db50edb141893c3f \
-    --hash=sha256:94c0a13b4a0616458b42529091624e66700a17f847453e52279e35509a5b7631
+jsonschema==3.2.0 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:4e5b3cf8216f577bee9ce139cbe72eca3ea4f292ec60928ff24758ce626cd163 \
+    --hash=sha256:c8a85b28d377cc7737e46e2d9f2b4f44ee3c0e1deac6bf46ddefc7187d30797a
 keyring==23.13.1 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:771ed2a91909389ed6148631de678f82ddc73737d85a927f382a8a1b157898cd \
     --hash=sha256:ba2e15a9b35e21908d0aaf4e0a47acc52d6ae33444df0da2b49d41a46ef6d678
@@ -312,9 +315,9 @@ msgpack==1.0.4 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:f5d869c18f030202eb412f08b28d2afeea553d6613aee89e200d7aca7ef01f5f \
     --hash=sha256:fb62ea4b62bfcb0b380d5680f9a4b3f9a2d166d9394e9bbd9666c0ee09a3645c \
     --hash=sha256:fcb8a47f43acc113e24e910399376f7277cf8508b27e5b88499f053de6b115a8
-networkx==2.8 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:1a1e8fe052cc1b4e0339b998f6795099562a264a13a5af7a32cad45ab9d4e126 \
-    --hash=sha256:4a52cf66aed221955420e11b3e2e05ca44196b4829aab9576d4d439212b0a14f
+networkx==2.8.3 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:67fab04a955a73eb660fe7bf281b6fa71a003bc6e23a92d2f6227654c5223dbe \
+    --hash=sha256:f151edac6f9b0cf11fecce93e236ac22b499bb9ff8d6f8393b9fef5ad09506cc
 oscrypto==1.3.0 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:2b2f1d2d42ec152ca90ccb5682f3e051fb55986e1b170ebde472b133713e7085 \
     --hash=sha256:6f5fef59cb5b3708321db7cca56aed8ad7e662853351e7991fcf60ec606d47a4
@@ -466,33 +469,36 @@ setuptools==67.5.1 ; python_version >= "3.8" and python_version < "3.9" \
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
     --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
-snowflake-connector-python[secure-local-storage]==2.7.9 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:1d0fddee5baa746d41ae2b8ff105f3664e49670c0b247d4940837706d103a4ce \
-    --hash=sha256:2a0733a0fe98256e3087f7dc8fc73344fa3b0513542d65456a3014cb6059878e \
-    --hash=sha256:38ab73842ababc1545fc367cfb0c2e96114a572d531793e9631c66a3030089dd \
-    --hash=sha256:44d1a54f998221bbc9f613cc708bd64548e3eda14eebd09f6bc2d23ba7a7b301 \
-    --hash=sha256:52fc6ab1d98d73b251e3e07358ea8e62ef95bbf98f4e5693e14fdfbef36c2063 \
-    --hash=sha256:6cd0078cf0014b82128729775c92b206734a88922223d86cfcee105bf1c46281 \
-    --hash=sha256:80c0f2cabcde625a126daca4418098eb7c25a43b32314810f68cfda27f4dae2f \
-    --hash=sha256:a76af86817110920384912a049aaf09fe53ad878dc5f8598c707b7b00b875c1d \
-    --hash=sha256:b42a2bc3b6055846e34177bdb43b8caea1b4da0bc60b2618aa08a43f3bd26c6d \
-    --hash=sha256:b4be516b0bb4156a9226cafc9cfd2620e307f5e2bde097c889ef841391b211ad \
-    --hash=sha256:c414a6a313866e628211d22e4ccc5faa22c0eba5ffe10ab14b62582005f569f8 \
-    --hash=sha256:c6d39c73603f0f56e02c5dd3a964ae2c46373d23ff5a2c2f239af11a080e2d0d \
-    --hash=sha256:d09503a78843fbed286a03131aeceec68f7487148258f7116c4fe27bc3203a9c \
-    --hash=sha256:e3d897f670fdf54bf5564d559fc78e7039fb1e55ffc9d1d518d35e651fd93476 \
-    --hash=sha256:e499ca45ffacb820c80a034c24aedee6af7f4b57194929bebb20f7be554c7657 \
-    --hash=sha256:f74572c22af7d27593f31b92259ce99bcbc79c62935b3bafb497e00978751e37
+snowflake-connector-python[secure-local-storage]==2.7.12 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:0daf777bbd0fdeddfb131610289662f2a72688dd5072db4bc346a9ff5fe68774 \
+    --hash=sha256:10a287b18b1b8b6fb352f780d2727a1e9293cc86985a9f5816e0823d280bcf94 \
+    --hash=sha256:1242b79311bf9932825a46e1a8e455bd06a4487c61fc57c68a3626a9ddfa6273 \
+    --hash=sha256:1372b8032ddde0096cb9e55c2e809863ba45eb69aef3b5b7eb14d51a36970ac6 \
+    --hash=sha256:24a3963a8d7c99ca120b329046b52f6ebf1ada9a7778edb00c52859f7089ac12 \
+    --hash=sha256:2d5071eb8bca51b2dd1b8c2dfed395f10bb0ec3509a49ebcf65a9c25b39fd351 \
+    --hash=sha256:339d1823a681edf49544b780ab12cab6cc49202d6858b71bf4cbda87dfc2ff35 \
+    --hash=sha256:35cd36392e14c18d80977925addf5c26edcc33631ea2bbb1db43dc64c64d27c9 \
+    --hash=sha256:5623f5b2bc3a170b8c65d2a10f158741f65a9f43cc22958510c767f85376da1e \
+    --hash=sha256:620a229e0d965c975c1006c34eb805c6a1e1c777ee0de1fc055753f65f2a81e2 \
+    --hash=sha256:7174555b9f65fc68d1a2eaa05c0b34cdb404617f4b3a5bb10dc2219e92378019 \
+    --hash=sha256:764aef9c6feae2eb0afeda45810bc2ba096a1e30c1a6b5bbf4f0129d7df0b65a \
+    --hash=sha256:77342d9c3fb4642949737cf78e041b858eb7811e5eb41cdedc5690e8739bf327 \
+    --hash=sha256:775593002415c6817fa949870a9feb6812a36f88e8d35663c84b4cbf9875d165 \
+    --hash=sha256:7756945ddd968e24fc3baa5f731618dadfa566964063c860b8c33dbeffea4ed1 \
+    --hash=sha256:9a70b119c8b1a4775b8870d5b8db46631f56380efbfcc37cec4d80a18f72dc06 \
+    --hash=sha256:ad8e2680b0ac902443de001ed1ced7c1b01fee32d98a94fa56592684ffdfadb2 \
+    --hash=sha256:bd58d6d5d63dda7e1111daaea4b4ce252dbea07dd03282a6b270433c1f048d94 \
+    --hash=sha256:c54e08da3b568ca5cc82d0a7fa7adba54b90f4d84482d46f6ef032e02877e87f \
+    --hash=sha256:f63d990c36a86beb07206cfb99cd81b3934dba0ef80d9c5e343bff9f00357cb9
 sqlparse==0.4.3 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:0323c0ec29cd52bceabc1b4d9d579e311f3e4961b98d174201d5622a23b85e34 \
     --hash=sha256:69ca804846bb114d2ec380e4360a8a340db83f0ccf3afceeb1404df028f57268
 text-unidecode==1.3 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:1311f10e8b895935241623731c2ba64f4c455287888b18189350b67134a822e8 \
     --hash=sha256:bad6603bb14d279193107714b288be206cac565dfa49aa5b105294dd5c4aab93
-typing-extensions==3.10.0.2 ; python_version >= "3.8" and python_version < "3.9" \
-    --hash=sha256:49f75d16ff11f1cd258e1b988ccff82a3ca5570217d7ad8c5f48205dd99a677e \
-    --hash=sha256:d8226d10bc02a29bcc81df19a26e56a9647f8b0a6d4a83924139f4a8b01f17b7 \
-    --hash=sha256:f1d25edafde516b146ecd0613dabcc61409817af4766fbbcfb8d1ad4ec441a34
+typing-extensions==4.5.0 ; python_version >= "3.8" and python_version < "3.9" \
+    --hash=sha256:5cb5f4a79139d699607b3ef622a1dedafa84e115ab0024e0d9c044a9479ca7cb \
+    --hash=sha256:fb33085c39dd998ac16d1431ebc293a8b3eedd00fd4a32de0ff79002c19511b4
 urllib3==1.26.14 ; python_version >= "3.8" and python_version < "3.9" \
     --hash=sha256:076907bf8fd355cde77728471316625a4d2f7e713c125f51953bb5b3eecf4f72 \
     --hash=sha256:75edcdc2f7d85b137124a6c3c9fc3933cdeaa12ecb9a6a959f22797a0feca7e1
