--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,13 @@ jobs:
         run: curl -sSL https://install.python-poetry.org | python3 -
 
       - name: Check pyproject.toml
-        run: poetry check
+        run: |
+          versions=($(ls -1A .))
+          for version in "${versions[@]}"; do
+            pushd "${version}"
+            poetry check
+            popd
+          done
         working-directory: ./requirements
 
       - name: Run ShellCheck
