--- a/requirements/1.3/pyproject.toml
+++ b/requirements/1.3/pyproject.toml
@@ -10,6 +10,7 @@ packages = []
 python = "~3.8"
 dbt-core = "~1.3.3"
 dbt-rpc = "~0.2.1"
+dbt-athena-community = "~1.3.5"
 dbt-bigquery = "~1.3.1"
 dbt-postgres = "~1.3.3"
 dbt-redshift = "~1.3.0"
