--- a/requirements/1.2/pyproject.toml
+++ b/requirements/1.2/pyproject.toml
@@ -10,6 +10,7 @@ packages = []
 python = "~3.8"
 dbt-core = "~1.2.5"
 dbt-rpc = "~0.1.2"
+dbt-athena-community = "~1.0.4"
 dbt-bigquery = "~1.2.0"
 dbt-postgres = "~1.2.5"
 dbt-redshift = "~1.2.1"
