--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .DS_Store
+
+# Do not commit locally generated requirements.txt files
+# (they're generated automatically by the deploy pipeline)
+**/requirements-*.txt
