--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 
 # Do not commit locally generated requirements.txt files
 # (they're generated automatically by the deploy pipeline)
-**/requirements-*.txt
+/requirements/*/requirements-*.txt
