--- a/requirements/1.5/pyproject.toml
+++ b/requirements/1.5/pyproject.toml
@@ -10,6 +10,7 @@ dbt-core = "~1.5.3"
 dbt-rpc = "~0.4.1"
 dbt-athena-community = "~1.5.1"
 dbt-bigquery = "~1.5.3"
+dbt-materialize = "~1.5.1"
 dbt-postgres = "~1.5.3"
 dbt-redshift = "~1.5.8"
 dbt-snowflake = "~1.5.2"
