--- a/requirements/1.0/pyproject.toml
+++ b/requirements/1.0/pyproject.toml
@@ -10,6 +10,7 @@ dbt-core = "~1.0.9"
 dbt-rpc = "~0.1.2"
 dbt-athena-community = "~1.0.4"
 dbt-bigquery = "~1.0.0"
+dbt-materialize = "~1.0.5"
 dbt-postgres = "~1.0.9"
 dbt-redshift = "~1.0.1"
 dbt-snowflake = "~1.0.1"
