--- a/requirements/1.4/pyproject.toml
+++ b/requirements/1.4/pyproject.toml
@@ -10,6 +10,7 @@ dbt-core = "~1.4.4"
 dbt-rpc = "~0.3.1"
 dbt-athena-community = "~1.4.3"
 dbt-bigquery = "~1.4.1"
+dbt-materialize = "~1.4.1"
 dbt-postgres = "~1.4.4"
 dbt-redshift = "~1.4.0"
 dbt-snowflake = "~1.4.1"
